src/test/deca/context/invalid/sansObjet/bool_eq.deca
{
  bool x= (23==23);
}
